--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -8,11 +8,11 @@
                       <h3 class="text-center text-info">Login</h3>
                       <div class="form-group">
                           <label for="username" class="text-info">Username:</label><br>
-                          <input type="text" ngModel name="username" id="username" class="form-control">
+                          <input type="text" ngModel name="email" id="username" class="form-control">
                       </div>
                       <div class="form-group">
                           <label for="password" class="text-info">Password:</label><br>
-                          <input type="text" ngModel name="password" id="password" class="form-control">
+                          <input type="password" ngModel name="password" id="password" class="form-control">
                       </div>
                       <div class="form-group">
                           <label for="remember-me" class="text-info"><span>Remember me</span> <span>
