change in login component and add new register component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,2 @@
-<app-login></app-login>
+<router-outlet></router-outlet>
 
-<div style="text-align:center">
-    <button (click)="openModal()">Open Dialog</button>
-  </div>
