--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -4,7 +4,7 @@
       <div id="login-row" class="row justify-content-center align-items-center">
           <div id="login-column" class="col-md-6">
               <div id="login-box" class="col-md-12">
-                  <form #login="ngForm" id="login-form" class="form">
+                  <form #login="ngForm" (ngSubmit)="userLogin(login)" id="login-form" class="form">
                       <h3 class="text-center text-info">Login</h3>
                       <div class="form-group">
                           <label for="username" class="text-info">Username:</label><br>
@@ -17,11 +17,11 @@
                       <div class="form-group">
                           <label for="remember-me" class="text-info"><span>Remember me</span> <span>
                           <input id="remember-me" name="remember-me" type="checkbox"></span></label><br>
-                          <button type="button"  (click)="userLogin(login)" class="btn btn-info btn-md"> Submit </button>
+                          <button type="submit"  class="btn btn-info btn-md"> Submit </button>
                           <!-- <input type="submit" name="submit" class="btn btn-info btn-md" value="submit"> -->
                       </div>
                       <div id="register-link" class="text-right">
-                          <a href="#" class="text-info">Register here</a>
+                          <a [routerLink]="['register']" class="text-info">Register here</a>
                       </div>
                   </form>
               </div>
