--- a/src/app/component/register/register.component.html
+++ b/src/app/component/register/register.component.html
@@ -1,3 +1,32 @@
-<p>
-  register works!
-</p>
+<div id="login">
+  <h3 class="text-center text-white pt-5">Login form</h3>
+  <div class="container">
+    <div id="login-row" class="row justify-content-center align-items-center">
+      <div id="login-column" class="col-md-6">
+        <div id="login-box" class="col-md-12">
+          <form #Register="ngForm" id="login-form" class="form">
+            <h3 class="text-center text-info">Login</h3>
+            <div class="form-group">
+              <label for="username" class="text-info">Username:</label><br>
+              <input type="text" ngModel name="name" id="username" class="form-control">
+            </div>
+            <div class="form-group">
+              <label for="username" class="text-info">Email:</label><br>
+              <input type="text" ngModel name="email" id="email" class="form-control">
+            </div>
+            <div class="form-group">
+              <label for="password" class="text-info">Password:</label><br>
+              <input type="password" ngModel name="password" id="password" class="form-control">
+            </div>
+            <div class="form-group">
+              <label for="remember-me" class="text-info"><span>Remember me</span> <span>
+                  <input id="remember-me" name="remember-me" type="checkbox"></span></label><br>
+              <button type="button" (click)="userRegister(Register)" class="btn btn-info btn-md"> Submit </button>
+              <!-- <input type="submit" name="submit" class="btn btn-info btn-md" value="submit"> -->
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
