router link removed

--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -9,7 +9,7 @@
   <mat-sidenav mode="side" #sidenav id="sidenav" [class.menu-open]="isMenuOpen" [class.menu-close]="!isMenuOpen" opened>
     <mat-list id="menus">
       <mat-list-item ngClass="border-btm">
-        <button [routerLink]="['']" class="menu-item" mat-flat-button>
+        <button class="menu-item" mat-flat-button>
           <mat-icon >dashboard</mat-icon>
           Dashboard
         </button>
